[package]
name = "libusbk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["libusbk-sys"]

[dependencies]
winapi = { version = "0.3.9", features = ["errhandlingapi", "ioapiset"] }
libusbk-sys = { path = "libusbk-sys", version = "0.1.0" }
once_cell = "1.12.0"
thiserror = "1.0.31"
