[package]
name = "libusbk"
version = "0.1.1"
edition = "2021"
description = "FFI bindings for libusbK."
keywords = ["usb", "libusbk", "hardware", "bindings"]
authors = ["Ethan Budd <budde25@protonmail.com"]
homepage = "https://github.com/budde25/libusbk-rs"
repository = "https://github.com/budde25/libusbk-rs.git"
readme = "README.md"
license = "MIT"
categories = ["hardware-support"]

[workspace]
members = ["libusbk-sys"]

[features]
vendored = ["libusbk-sys/vendored"]

[dependencies]
libusbk-sys = { path = "libusbk-sys", version = "0.1.1" }
once_cell = "1.12.0"
thiserror = "1.0.31"
winapi = { version = "0.3.9", features = ["errhandlingapi", "ioapiset"] }
